# haskellbook-excercises

./: README.md
ch10/: exercises.hs  test.hs
ch11/: BinaryTreeEx.hs  exercises.hs  phone.hs  test.hs  vigenere.hs
ch12/: exercise.hs  test.hs
ch13/: exercises.hs  test.hs
ch14/: ch14.cabal
ch14/src/: Main.hs  WordNumber.hs  addition.hs  exercises.hs  morse.hs
ch14/tests/: tests.hs
ch15/: exercise.hs  test.hs
ch15proj/: README.md  ch15proj.cabal
ch15proj/src/: Main.hs
ch16/: ch16.cabal
ch16/src/: Funct.hs
ch16/test/: exercises.hs  tests.hs
ch17proj/: README.md  ch17proj.cabal
ch17proj/src/: BadMonoid.hs  Ch17Content.hs  Ch17Exercises.hs
ch17proj/test/: Spec.hs
ch18/: ch18.cabal
ch18/src/: Ch18Content.hs  Ch18Exercises.hs
ch18/test/: Spec.hs
ch19/: ch19.cabal  stack.yaml
ch19/app/: Main.hs
ch2/: ModuleWithWhere.hs  learn.hs
ch20/: ch20.cabal
ch20/src/: Ch20Content.hs  Ch20Exercises.hs
ch21/: ch21.cabal
ch21/src/: Ch21Content.hs  Ch21Exercises.hs
ch21/test/: Spec.hs
ch22/: ch22.cabal
ch22/src/: Ch22Content.hs  Ch22Exercises.hs  ReaderPractice.hs
ch23/: ch23.cabal
ch23/src/: Ch23Content.hs  Ch23Exercises.hs
ch24/: ch24.cabal
ch24/app/: Main.hs
ch24/src/: Ch24Content.hs  Ch24Exercises.hs  DataIni.hs  Ex5ParseLog.hs  Marshalling.hs  TextFractions.hs
ch24/test/: Spec.hs
ch25/: ch25.cabal
ch25/src/: Ch25Content.hs  Ch25Exercises.hs
ch26/: ch26.cabal
ch26/src/: Ch26ChaptExercises.hs  Ch26Content.hs  Ch26Exercises.hs  Ch26ExercisesIO.hs  Ch26HitCounter.hs  OuterInner.hs  Scotty.hs
ch27/: README.md  ch27.cabal
ch27/src/: Ch27Exercises.hs  CoreDump.hs  Main.hs
ch28/: README.md  ch28.cabal
ch3/: ex-module-rev.hs  exercises.hs  print3.hs  print3broken.hs  print3flipped.hs
ch4/: definitions.hs  excercises.hs  greetIfCool.hs  mistakes.hs  test.hs
ch5/: arith3broken.hs  excercises.hs  test.hs
ch6/: exercises.hs  test.hs
ch7/: excercises.hs  registeredUser.hs  registeredUser2.hs  test.hs
ch8/: exercises.hs  test.hs
ch9/: cipher.hs  exercises.hs  test.hs
ciphers/: ciphers.cabal
ciphers/lib/: CaesarCipher.hs  VigenereCipher.hs
ciphers/src/: Main.hs
phone/: phone.cabal
phone/src/: Main.hs  Phone.hs
