name:                ch14
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/ch14#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Addition,
                       Morse
  build-depends:       base >= 4.7 && < 5,
                       hspec,
                       QuickCheck,
                       containers
  ghc-options:         -Wall -fwarn-tabs
  default-language:    Haskell2010

executable morse
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Morse
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5,
                       QuickCheck,
                       containers,
                       ch14
  default-language:    Haskell2010

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             tests.hs
  build-depends:       base
                     , containers
                     , ch14
                     , QuickCheck
  ghc-options:         -Wall -fno-warn-orphans
  default-language:    Haskell2010




