name:                ch18
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/ch18#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Ch18Content
                      ,Ch18Exercises
  build-depends:       base >= 4 && < 5
                      ,hspec
                      ,QuickCheck
                      ,containers
                      ,transformers
                      -- ,validation
                      ,checkers
  ghc-options:         -Wall
  default-language:    Haskell2010


test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                      ,ch18
                      ,hspec
                      ,QuickCheck
                      ,containers
                      ,checkers
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
