name:                ch19
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/ch19#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable ch19
  hs-source-dirs: app
  main-is:        Main.hs
  ghc-options:    -threaded
  build-depends:  base
                , bytestring
                , hedis
                , mtl
                , network-uri
                , random
                , scotty
                , semigroups
                , text
                , transformers
  default-language:    Haskell2010