name:                ch20
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/ch20#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Ch20Exercises
                      ,Ch20Content
  other-modules:       Module
  build-depends:       base >= 4 && < 5
  ghc-options:         -Wall
  default-language:    Haskell2010
