name:                phone
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/phone#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Phone
  build-depends:       base >= 4.7 && < 5,
                       hspec,
                       QuickCheck,
                       containers
  default-language:    Haskell2010

executable phone
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                      ,hspec
                      ,QuickCheck
                      ,containers

test-suite cooler-doctests
  default-language:   Haskell2010
  type:               exitcode-stdio-1.0
  ghc-options:        -threaded
  main-is:            doctest-driver.hs
  build-depends:      base >4 && <5, doctest, doctest-discover
  HS-Source-Dirs:     test